--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nebular/theme": "2.0.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "@swimlane/ngx-charts": "7.0.1",
+    "@types/jsonwebtoken": "^8.3.0",
     "angular-tree-component": "7.2.0",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "6.0.0",
@@ -63,6 +64,7 @@
     "echarts": "^4.0.2",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jsonwebtoken": "^8.3.0",
     "leaflet": "1.2.0",
     "nebular-icons": "1.0.9",
     "ng2-ckeditor": "1.1.13",
