--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^2.2.0",
     "leaflet": "1.2.0",
     "nebular-icons": "1.0.9",
     "ng2-ckeditor": "1.1.13",
